<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/material_dynamic_primary90"
    android:padding="24dp">

    <TextView
        android:id="@+id/scoreText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:padding="12dp"
        android:text="@string/you_scored_out_of_5"
        android:textColor="#0277BD"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/feedbackText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/feedback_message_will_appear_here"
        android:textColor="#3F51B5"
        android:textSize="25sp" />

    <Button
        android:id="@+id/reviewButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/review_of_answers"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_app"
        android:layout_marginTop="30dp" />
</LinearLayout>
